--- a/TextConverter.Domain/TextConverter.Domain.csproj
+++ b/TextConverter.Domain/TextConverter.Domain.csproj
@@ -40,10 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\TextConverters\CSVConverter.cs" />
+    <Compile Include="Interfaces\ITextConverter.cs" />
     <Compile Include="Entities\Sentence.cs" />
-    <Compile Include="Entities\Converter.cs" />
+    <Compile Include="Entities\TextConverterManager.cs" />
     <Compile Include="Entities\TextModel.cs" />
     <Compile Include="Entities\Word.cs" />
+    <Compile Include="Entities\TextConverters\XMLConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
